# minimal-embedding-server

./: .gitignore  LICENSE  README.md  README_EN.md  build.sh  pip.conf  pyproject.toml  pytest.ini  requirements.txt  setup.py
benchmark/: compare_transformers.py  deploy.sh  stress_test.py  vllm.sh
core/: engine.py  gpu_worker.py  tokenizer_manager.py
layers/: attention.py  embed_head.py  flashattention.py  flashinfer.py  linear.py  rotary_embedding.py
layers/attention/: __init__.py  base.py  flashattention.py  flashinfer.py
layers/quantization/: __init__.py  awq_marlin.py  base_config.py  marlin_utils.py  quant_utils.py
models/: __init__.py  qwen2.py  qwen3.py  registry.py
openai_server/: __init__.py  fast_api.py
schemas/: config.py  http.py
test/: test_accuracy.py  test_accuracy_tp2.py  test_tp2.py
test/model/: test_qwen2_accuracy.py  test_qwen3_accuracy.py
ultils/: __init__.py  dtype_utils.py  loader.py  pool.py
